<resources>
    <string name="app_name">Price Estimator</string>
    <string name="item_price">Item Price: $</string>
    <string name="example_price">25.97</string>
    <string name="discount_options">Discount &amp; Tax Options: </string>
    <string name="sale">Sale (%s%% off)</string>
    <string name="clearance">Clearance (%s%% off)</string>
    <string name="military_first_responders">Military &amp; First Responders Discount (%s%% off)</string>
    <string name="tax">Tax (%s%%)</string>
    <string name="final_price_text">Estimated Final Price: $%s</string>
    <string name="calculate">Calculate</string>
    <string name="reset">Reset</string>
    <string name="title_home">Home</string>
    <string name="title_edit">Edit</string>
    <string name="title_help">Help</string>
    <string name="edit_values">Edit Values:</string>
    <string name="edit_sales">Sale (% off): </string>
    <string name="edit_clearance">Clearance (% off): </string>
    <string name="edit_military_first_responder">Military &amp; First Responders (% off): </string>
    <string name="edit_tax">Tax (%): </string>
    <string name="example_sale_percentage">10</string>
    <string name="example_clearance_percentage">30</string>
    <string name="example_military_first_responders_percentage">20</string>
    <string name="example_tax_percentage">6.75</string>
    <string name="apply">Apply</string>
    <string name="title_settings">Settings</string>
    <string name="invalid_input">Invalid Input</string>
    <string name="invalid_input_message">Item Price cannot be greater than $1,000.</string>
    <string name="ok">OK</string>
    <string name="invalid_output">Invalid Output</string>
    <string name="invalid_output_message">Final Price is negative.\nPlease make sure that your settings are valid.\n(i.e. Each value is less than 100.)</string>
    <string name="zero_input_message">Please Enter a Non-Zero value for Item Price.</string>
    <string name="promoImage">Promo</string>
<!--    <string name="help_instructions">Enter Item Price \n(up to $1000) to estimate \nfinal price after \nall discounts/tax.</string>-->
    <string name="help_instructions">Enter Item Price \n(up to $1000) to estimate final price after all discounts/tax.</string>
    <string name="warning_instructions">NOTE: discount/tax percentages must be less than 100</string>



    <string name="clear_settings">Clear Settings</string>
    <string name="reset_settings">Reset To Default Settings</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>