<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.zybooks.retailpriceestimator.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_edit"
        android:name="com.zybooks.retailpriceestimator.EditFragment"
        android:label="@string/title_edit"
        tools:layout="@layout/fragment_edit" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.zybooks.retailpriceestimator.SettingsActivity$SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/settings_activity"/>

    <fragment
        android:id="@+id/navigation_help"
        android:name="com.zybooks.retailpriceestimator.HelpFragment"
        android:label="@string/title_help"
        tools:layout="@layout/fragment_help" />
</navigation>