<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="@dimen/constraint_layout_margin_horizontal"
    android:layout_marginVertical="@dimen/constraint_layout_margin_vertical">


    <TextView
        android:id="@+id/item_price_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/item_price_edit_text"
        android:text="@string/item_price"
        android:textSize="@dimen/item_price_text_size"
        app:layout_constraintBaseline_toBaselineOf="@id/item_price_edit_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/item_price_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="5"
        android:textSize="@dimen/item_price_edit_text_size"
        android:hint="@string/example_price"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        app:layout_constraintLeft_toRightOf="@id/item_price_text_view"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/discount_options_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/discount_options_margin_top"
        android:text="@string/discount_options"
        android:textSize="@dimen/discount_options_text_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_price_text_view"/>

    <CheckBox
        android:id="@+id/checkpoint_sale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sale"
        android:textSize="@dimen/checkbox_text_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/discount_options_text"/>

    <CheckBox
        android:id="@+id/checkpoint_clearance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clearance"
        android:textSize="@dimen/checkbox_text_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkpoint_sale"/>

    <CheckBox
        android:id="@+id/checkpoint_military_first_responder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/military_first_responders"
        android:textSize="@dimen/checkbox_text_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkpoint_clearance"/>

    <CheckBox
        android:id="@+id/checkpoint_tax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tax"
        android:textSize="@dimen/checkbox_text_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkpoint_military_first_responder"/>

    <TextView
        android:id="@+id/final_price_text_view"
        android:layout_marginTop="@dimen/final_price_margin_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/final_price_text"
        android:textSize="@dimen/item_price_text_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkpoint_tax"/>

    <Button
        android:id="@+id/calc_button"
        android:text="@string/calculate"
        android:layout_width="match_parent"
        android:layout_height="@dimen/calc_button_layout_height"
        android:layout_marginTop="@dimen/calc_button_layout_margin_top"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/final_price_text_view"
        style="@style/CalcButton"/>

    <Button
        android:id="@+id/reset_button"
        android:text="@string/reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/reset_button_layout_margin_top"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calc_button"
        style="@style/ResetButton"/>
</androidx.constraintlayout.widget.ConstraintLayout>