<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="10dp">

    <ImageView
        android:id="@+id/promoImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/promo"
        android:contentDescription="@string/promoImage"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@id/instructionsTextView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/instructionsTextView"
        android:textSize="30sp"
        android:layout_margin="30dp"
        android:layout_marginHorizontal="60dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/help_instructions"
        app:layout_constraintTop_toBottomOf="@id/promoImage"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/warningsTextView"
        android:textSize="30sp"
        android:layout_margin="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/warning_instructions"
        app:layout_constraintTop_toBottomOf="@id/instructionsTextView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>