<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/edit_page_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_values"
        android:textSize="@dimen/edit_values_text_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/text_view_sale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/sale_edit_text"
        android:layout_marginTop="20dp"
        android:text="@string/edit_sales"
        android:textSize="@dimen/discount_options_text_size"
        app:layout_constraintBaseline_toBaselineOf="@id/sale_edit_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_page_title"/>

    <EditText
        android:id="@+id/sale_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="3"
        android:hint="@string/example_sale_percentage"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textSize="@dimen/discount_options_text_size"
        app:layout_constraintLeft_toRightOf="@id/text_view_sale"
        app:layout_constraintTop_toBottomOf="@id/edit_page_title" />

    <TextView
        android:id="@+id/text_view_clearance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/clearance_edit_text"
        android:layout_marginTop="20dp"
        android:text="@string/edit_clearance"
        android:textSize="@dimen/discount_options_text_size"
        app:layout_constraintBaseline_toBaselineOf="@id/clearance_edit_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_sale"/>

    <EditText
        android:id="@+id/clearance_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="3"
        android:hint="@string/example_clearance_percentage"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textSize="@dimen/discount_options_text_size"
        app:layout_constraintLeft_toRightOf="@id/text_view_clearance"
        app:layout_constraintTop_toBottomOf="@id/sale_edit_text" />

    <TextView
        android:id="@+id/text_view_military_first_responder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/military_first_responder_edit_text"
        android:layout_marginTop="20dp"
        android:text="@string/edit_military_first_responder"
        android:textSize="@dimen/discount_options_text_size"
        app:layout_constraintBaseline_toBaselineOf="@id/military_first_responder_edit_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_clearance"/>

    <EditText
        android:id="@+id/military_first_responder_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="3"
        android:hint="@string/example_military_first_responders_percentage"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textSize="@dimen/discount_options_text_size"
        app:layout_constraintLeft_toRightOf="@id/text_view_military_first_responder"
        app:layout_constraintTop_toBottomOf="@id/clearance_edit_text" />

    <TextView
        android:id="@+id/text_view_tax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/tax_edit_text"
        android:layout_marginTop="20dp"
        android:text="@string/edit_tax"
        android:textSize="@dimen/discount_options_text_size"
        app:layout_constraintBaseline_toBaselineOf="@id/tax_edit_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_military_first_responder"/>

    <EditText
        android:id="@+id/tax_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="3"
        android:hint="@string/example_tax_percentage"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        android:textSize="@dimen/discount_options_text_size"
        app:layout_constraintLeft_toRightOf="@id/text_view_tax"
        app:layout_constraintTop_toBottomOf="@id/military_first_responder_edit_text" />



    <!--    <TextView-->
<!--        android:id="@+id/discount_options_text"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:text="@string/discount_options"-->
<!--        android:textSize="@dimen/discount_options_text_size"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/item_price_text_view"/>-->

<!--    <CheckBox-->
<!--        android:id="@+id/checkpoint_sale"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/sale"-->
<!--        android:textSize="@dimen/checkbox_text_size"-->
<!--        android:onClick="onCheckBoxClicked"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/discount_options_text"/>-->

<!--    <CheckBox-->
<!--        android:id="@+id/checkpoint_clearance"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/clearance"-->
<!--        android:textSize="@dimen/checkbox_text_size"-->
<!--        android:onClick="onCheckBoxClicked"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/checkpoint_sale"/>-->

<!--    <CheckBox-->
<!--        android:id="@+id/checkpoint_military_first_responder"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/military_first_responders"-->
<!--        android:textSize="@dimen/checkbox_text_size"-->
<!--        android:onClick="onCheckBoxClicked"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/checkpoint_clearance"/>-->

<!--    <CheckBox-->
<!--        android:id="@+id/checkpoint_tax"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/tax"-->
<!--        android:textSize="@dimen/checkbox_text_size"-->
<!--        android:onClick="onCheckBoxClicked"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/checkpoint_military_first_responder"/>-->

<!--    <TextView-->
<!--        android:id="@+id/final_price_text_view"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/final_price_text"-->
<!--        android:textSize="@dimen/item_price_text_size"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/checkpoint_tax"/>-->

    <Button
        android:id="@+id/apply_button"
        android:text="@string/apply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:onClick="applyClick"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_tax"/>

<!--    <Button-->
<!--        android:id="@+id/reset_button"-->
<!--        android:text="@string/reset"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="5dp"-->
<!--        android:onClick="resetClick"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/calc_button"/>-->
</androidx.constraintlayout.widget.ConstraintLayout>